--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 </style>
 
 <head>
+	<meta charset="utf-8">
 	<script type="text/javascript" src="jscolor/jscolor.js"></script>
 	<title>Gerador de gráficos Online</title>
 </head>
