--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
 		padding-right: 50px;
 		padding-top: 10px;
 		padding-bottom: 10px;
-		
 		font-size: 16px;
 		font-family: fantasy;
 
@@ -82,11 +81,11 @@
 <head>
 	<meta charset="utf-8">
 	<script type="text/javascript" src="jscolor/jscolor.js"></script>
-	<title>Gerador de gráficos Online</title>
+	<title>Gerador de grÃ¡ficos Online</title>
 </head>
 <body bgcolor="#212121">
 <div align="center" style="background-color:#333; box-shadow: 0px 10px 3px #111; ">
-<font face="helvetica" size="5" color="#fff"><h3>LuTeX: Gerador de gráficos online</h3></font>
+<font face="helvetica" size="5" color="#fff"><h3>LuTeX: Gerador de grÃ¡ficos online</h3></font>
 </div>
 <div style="float:left; background-color:#222; box-shadow: 0px 10px 3px #111;">
 <font face="verdana" size="2" color="#fff">
@@ -127,8 +126,8 @@ Your browser does not support the HTML5 canvas tag.
 <br>
 largura: <input id="width" type="number" size="5" value="600">px<br>
 altura: <input id="height" type="number" size="5" value="300">px<br>
-máximo valor em X:<input id="max_x" type="number" size="5" value="12"><br>
-máximo valor em Y:<input id="max_y"type="number" size="5" value="2"><br>
+mÃ¡ximo valor em X:<input id="max_x" type="number" size="5" value="12"><br>
+mÃ¡ximo valor em Y:<input id="max_y"type="number" size="5" value="2"><br>
 offset em X: <input id="offset_x" type="number" size="5" value="20" >px<br>
 offset em Y: <input id="offset_y" type="number" size="5" value="20">px<br>
 <!--
